# helloworld-tonic

./: .gitignore  Cargo.toml  build.rs  readme.md
quarkus/helloworld/: README.md  pom.xml
quarkus/helloworld/src/main/java/org/acme/: HelloWorldClient.java
quarkus/helloworld/src/main/resources/: application.properties
src/: client.rs  server.rs
