[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.8.2", features = ["tls","prost"]}
prost = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread","fs"] }
futures = "0.3.25"
clap = { version = "4.0.23", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"
